# conversation_engine

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
action/: Converse.action
launch/: conversation_engine.launch
scripts/: conversation_action.py  engine
src/conversation_engine/: __init__.py  engine.py
test/: engine_tests.py  test_import.py
