<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>conversation_engine</name>
  <version>0.0.0</version>
  <description>The conversation_engine package provides a way to conversate with a robot to give it commands</description>

  <maintainer email="loy.vanbeek@gmail.com">Loy van Beek</maintainer>

  <license>BSD</license>

  <url type="bugtracker">https://github.com/tue-robotics/conversation_engine/issues</url>
  <url type="repository">https://github.com/tue-robotics/conversation_engine</url>

  <buildtool_depend>catkin</buildtool_depend>

  <buildtool_depend condition="$ROS_PYTHON_VERSION == 2">python-setuptools</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 3">python3-setuptools</buildtool_depend>

  <depend>actionlib_msgs</depend>
  <depend>rospy</depend>

  <build_depend>message_generation</build_depend>

  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  
  <exec_depend>action_server</exec_depend>

  <test_depend condition="$ROS_PYTHON_VERSION == 2">python-mock</test_depend>
  <test_depend condition="$ROS_PYTHON_VERSION == 3">python3-mock</test_depend>

  <doc_depend condition="$ROS_PYTHON_VERSION == 2">python-sphinx</doc_depend>
  <doc_depend condition="$ROS_PYTHON_VERSION == 3">python3-sphinx</doc_depend>
  <doc_depend>python-sphinx-autoapi-pip</doc_depend>
  <doc_depend>python-sphinx-rtd-theme-pip</doc_depend>\
  <doc_depend condition="$ROS_PYTHON_VERSION == 2">python-yaml</doc_depend>
  <doc_depend condition="$ROS_PYTHON_VERSION == 3">python3-yaml</doc_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>

</package>
